fixing build... disable intellimand and msm_sleeper

--- a/arch/arm/configs/elementalx_defconfig
+++ b/arch/arm/configs/elementalx_defconfig
@@ -461,7 +461,7 @@ CONFIG_MSM_IPC_ROUTER_SMD_XPRT=y
 CONFIG_MSM_IPC_ROUTER_SECURITY=y
 # CONFIG_MSM_DALRPC is not set
 # CONFIG_MSM_CPU_FREQ_SET_MIN_MAX is not set
-CONFIG_MSM_SLEEPER=y
+# CONFIG_MSM_SLEEPER is not set
 CONFIG_CPU_VOLTAGE_TABLE=y
 # CONFIG_MSM_AVS_HW is not set
 # CONFIG_MSM_HW3D is not set
@@ -744,7 +744,7 @@ CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_ELEMENTALX=y
 # CONFIG_CPU_FREQ_GOV_INTERACTIVE is not set
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
-CONFIG_CPU_FREQ_GOV_INTELLIDEMAND=y
+# CONFIG_CPU_FREQ_GOV_INTELLIDEMAND is not set
 
 #
 # ARM CPU frequency scaling drivers
@@ -790,6 +790,7 @@ CONFIG_PM_AUTOSLEEP=y
 CONFIG_PM_WAKELOCKS=y
 CONFIG_PM_WAKELOCKS_LIMIT=0
 # CONFIG_PM_WAKELOCKS_GC is not set
+CONFIG_FB_EARLYSUSPEND=y
 CONFIG_PM_RUNTIME=y
 CONFIG_PM=y
 CONFIG_PM_DEBUG=y
