--- a/arch/arm/configs/elementalx_defconfig
+++ b/arch/arm/configs/elementalx_defconfig
@@ -461,7 +461,7 @@ CONFIG_MSM_IPC_ROUTER_SMD_XPRT=y
 CONFIG_MSM_IPC_ROUTER_SECURITY=y
 # CONFIG_MSM_DALRPC is not set
 # CONFIG_MSM_CPU_FREQ_SET_MIN_MAX is not set
-# CONFIG_MSM_SLEEPER is not set
+CONFIG_MSM_SLEEPER=y
 CONFIG_CPU_VOLTAGE_TABLE=y
 # CONFIG_MSM_AVS_HW is not set
 # CONFIG_MSM_HW3D is not set
